[gd_scene load_steps=18 format=3 uid="uid://4pgyi23vwj1l"]

[ext_resource type="Script" uid="uid://d20hi5txu2mv1" path="res://scenes/intPer_sorcier.gd" id="1_fs47a"]
[ext_resource type="Shader" uid="uid://ds1cxbshmvvav" path="res://machinatext/control.gdshader" id="2_qsnrd"]
[ext_resource type="Script" uid="uid://bapwjo5auuhhj" path="res://code/variations_script_dialogue/InterfaceDialogues.gd" id="3_4si0y"]
[ext_resource type="Script" uid="uid://brus5mykmrm80" path="res://scenes/command_processor_sorcier.gd" id="4_rup6u"]
[ext_resource type="Script" uid="uid://bhrh6vjlsssu" path="res://machinatext/tree.gd" id="5_6petf"]
[ext_resource type="PackedScene" uid="uid://n4d8t8u4vu8t" path="res://machinatext/input_scn.tscn" id="6_ieduy"]
[ext_resource type="Texture2D" uid="uid://iyw2hkps6vu0" path="res://characters/cha_sheet_jester.png" id="7_wh6py"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fv7w0"]
shader = ExtResource("2_qsnrd")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kss30"]
bg_color = Color(0.05615304, 0.22067188, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ggfdg"]
shader = ExtResource("2_qsnrd")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.122000005795
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 2.115
shader_parameter/roll_size = 15.9370007570075
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.1550000073625
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.1250000059375
shader_parameter/aberration = 0.00500004773750006
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.1750000083125
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.1150000054625

[sub_resource type="ShaderMaterial" id="ShaderMaterial_frhq8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61wa2"]
bg_color = Color(0.09850656, 0.328561, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_silo1"]
atlas = ExtResource("7_wh6py")
region = Rect2(167, 0, 160, 312)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhc6a"]
atlas = ExtResource("7_wh6py")
region = Rect2(327, 0, 160, 312)

[sub_resource type="SpriteFrames" id="SpriteFrames_lqiwi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_silo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhc6a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_fv7w0"]
data = PackedVector3Array(1.5999999, -1.3449999, 0, -1.5999999, -1.3449999, 0, 1.5999999, 1.3449999, 0, -1.5999999, -1.3449999, 0, -1.5999999, 1.3449999, 0, 1.5999999, 1.3449999, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_o72td"]
size = Vector3(1.7438965, 2.9960938, 1.8193359)

[node name="sorcier" type="Sprite3D"]
billboard = 1
script = ExtResource("1_fs47a")
accroche = "Je vous assure que nous étions là, et que c'est uniquement grâce à nous que le dragon a pu fuire..."

[node name="InterfaceDialogueTemplate" type="Control" parent="." node_paths=PackedStringArray("titre", "input_node")]
visible = false
material = SubResource("ShaderMaterial_fv7w0")
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -225.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_4si0y")
max_lines_rememebered = 8
titre = NodePath("Titre")
input_node = NodePath("PanelContainer/MarginContainer/rows/InputArea/HBoxContainer/input")

[node name="command processor" type="Control" parent="InterfaceDialogueTemplate"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_rup6u")

[node name="forest" type="Node" parent="InterfaceDialogueTemplate"]
script = ExtResource("5_6petf")

[node name="PanelContainer" type="PanelContainer" parent="InterfaceDialogueTemplate"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kss30")

[node name="PanelContainer" type="PanelContainer" parent="InterfaceDialogueTemplate/PanelContainer"]
visible = false
z_index = 1
material = SubResource("ShaderMaterial_ggfdg")
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="InterfaceDialogueTemplate/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="rows" type="VBoxContainer" parent="InterfaceDialogueTemplate/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GameInfo" type="PanelContainer" parent="InterfaceDialogueTemplate/PanelContainer/MarginContainer/rows"]
material = SubResource("ShaderMaterial_frhq8")
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_61wa2")

[node name="ScrollContainer" type="ScrollContainer" parent="InterfaceDialogueTemplate/PanelContainer/MarginContainer/rows/GameInfo"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
follow_focus = true

[node name="History" type="VBoxContainer" parent="InterfaceDialogueTemplate/PanelContainer/MarginContainer/rows/GameInfo/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="InputArea" type="PanelContainer" parent="InterfaceDialogueTemplate/PanelContainer/MarginContainer/rows"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InterfaceDialogueTemplate/PanelContainer/MarginContainer/rows/InputArea"]
layout_mode = 2

[node name="Label" type="Label" parent="InterfaceDialogueTemplate/PanelContainer/MarginContainer/rows/InputArea/HBoxContainer"]
layout_mode = 2
text = " > "

[node name="input" parent="InterfaceDialogueTemplate/PanelContainer/MarginContainer/rows/InputArea/HBoxContainer" instance=ExtResource("6_ieduy")]
layout_mode = 2
keep_editing_on_text_submit = true

[node name="reset" type="Button" parent="InterfaceDialogueTemplate"]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -54.0
offset_bottom = 31.0
grow_horizontal = 0
text = "RESET"

[node name="Titre" type="RichTextLabel" parent="InterfaceDialogueTemplate"]
layout_mode = 0
offset_left = 24.0
offset_top = -55.0
offset_right = 275.0
offset_bottom = -10.0
bbcode_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="MeshInstance3D"]
billboard = 1
sprite_frames = SubResource("SpriteFrames_lqiwi")
autoplay = "default"

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fv7w0")

[node name="AreaSorcier" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaSorcier"]
shape = SubResource("BoxShape3D_o72td")

[connection signal="text_submitted" from="InterfaceDialogueTemplate/PanelContainer/MarginContainer/rows/InputArea/HBoxContainer/input" to="InterfaceDialogueTemplate" method="_on_input_text_submitted"]
[connection signal="button_down" from="InterfaceDialogueTemplate/reset" to="InterfaceDialogueTemplate" method="_on_button_button_down"]
